@startuml
title NumericField Public Facade Structure
skinparam packageStyle rectangle
skinparam shadowing false

interface Control
class NumericField
class NumericFieldModel
class NumericFieldViewModel
class NumericFieldView
class NumericFieldInputAdapter
class NumericFieldViewState
class NumericFieldStyle
class NumericFieldRenderStyle
class DefaultNumericFieldRenderer
interface ThemeProvider
class ThemeSnapshot

NumericField ..|> Control
NumericField --> NumericFieldModel : owns
NumericField --> NumericFieldViewModel : owns
NumericField --> NumericFieldView : owns
NumericField --> NumericFieldInputAdapter : delegates input
NumericFieldInputAdapter --> NumericFieldView : geometry / hit testing
NumericFieldInputAdapter --> NumericFieldViewModel : interaction updates
NumericFieldViewModel --> NumericFieldModel : updates
NumericFieldView --> NumericFieldViewModel : reads
NumericFieldView --> NumericFieldViewState : builds
NumericFieldView --> NumericFieldStyle : renders with
NumericFieldStyle --> ThemeProvider : reads snapshot
ThemeProvider --> ThemeSnapshot
NumericFieldStyle --> NumericFieldViewState : resolves
NumericFieldStyle --> NumericFieldRenderStyle : creates
DefaultNumericFieldRenderer --> NumericFieldRenderStyle : draws
@enduml
